custom dragon breath page layout

--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ nav:
   about: /about/
   articles: /archives/
   test: /test-page/
+  Dragon Breath: /dragon-breath/
   #projects: projects_url
 
 # Links to your social media accounts.
