--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ nav:
   about: /about/
   articles: /archives/
   test: /test-page/
-  Dragon Breath: /dragon-breath/
+  Dragon Breath: /static/dragon-breath/
   #projects: projects_url
 
 # Links to your social media accounts.
