--- a/_config.yml
+++ b/_config.yml
@@ -43,9 +43,9 @@ tags_overview: false
 #   - post_count: whether to show only the x most recent posts.
 #   - sort_updated: sort posts by last modification date instead of creation date.
 posts_overview:
-  show_all_posts: false
+  show_all_posts: true
   post_count: 5
-  sort_updated: false
+  sort_updated: true
 
 # Customize the archive view.
 # Options:
@@ -59,7 +59,7 @@ archive:
 # Options:
 #   - show_updated: show the last modification date.
 post:
-  show_updated: false
+  show_updated: true
 
 ##############################################################################
 # Look and Feel
